--- a/ux.html
+++ b/ux.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands  Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1934444'>Job Application for Product UI/UX Designer at Roivant Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1934444'>Job Application for Product UI/UX Designer at Roivant Sciences</a></h5> 
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1932626'>Job Application for UX Designer  at AKQA</a></h5> 
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1932626'>Job Application for UX Designer  at AKQA</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -295,7 +295,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -307,7 +307,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -381,7 +381,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://styletheory.applytojob.com/apply/RjiCZOeXOF/Senior-UX-Researcher'>Senior UX Researcher - StyleTheory - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://styletheory.applytojob.com/apply/RjiCZOeXOF/Senior-UX-Researcher'>Senior UX Researcher - StyleTheory - Career Page</a></h5> 
 <p><span class="badge badge-light">Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -399,7 +399,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698130783-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698130783-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
